# 2kbit-py

./: README.md  botmain.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yaml  config.yml
modules/: basics.py  globalvars.py  nudge.py
